Added top gainers query
